--- a/app/styles/home-video.css
+++ b/app/styles/home-video.css
@@ -25,7 +25,7 @@ video#bgVideo {
 }
 .first-time-video-text h1 span:nth-child(2) {
   display: block;
-  max-width: 910px;
+  max-width: 645px;
   line-height: calc(30px + (85 - 30) * ((100vw - 320px) / (1920 - 320)));
 }
 .first-time-video-text h1 img {
@@ -321,7 +321,9 @@ a.yellow-btn {
   padding: 20px;
   box-sizing: border-box;
   opacity: 0.5;
-  transition: opacity 0.3s, transform 0.3s;
+  transition:
+    opacity 0.3s,
+    transform 0.3s;
 }
 
 .slide.active {
