create contact,caterin-cta-form,our-currywurst pages

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1101,7 +1101,7 @@ img.footer-bg-img {
 .dropdown,
 .dropdown-wrap {
   position: relative;
-  display: none;
+  display: block;
 }
 .dropdown-toggle {
   background-color: transparent;
