--- a/app/styles/home-video.css
+++ b/app/styles/home-video.css
@@ -162,27 +162,27 @@ a.yellow-btn {
   transform: rotate(8deg);
 }
 
-.img-big-wrap:nth-child(2) .img-one::before {
+.index-wrapper .img-big-wrap:nth-child(2) .img-one::before {
   background: url(/app/assets/pushpin.svg) no-repeat center / contain;
   width: 65px;
   height: 94px;
   top: -52px;
 }
 
-.img-big-wrap:nth-child(1) .img-one {
+.index-wrapper .img-big-wrap:nth-child(1) .img-one {
   z-index: 1;
   transform: rotate(-9deg);
   margin-top: 30px;
   margin-left: 3px;
 }
 
-.img-big-wrap:nth-child(2) .img-one {
+.index-wrapper .img-big-wrap:nth-child(2) .img-one {
   transform: rotate(7deg);
   margin-top: 50px;
   margin-left: -5px;
 }
 
-.img-big-wrap:nth-child(3) .img-one {
+.index-wrapper .img-big-wrap:nth-child(3) .img-one {
   transform: rotate(-10deg);
   margin-top: -30px;
   margin-left: -20px;
@@ -321,9 +321,7 @@ a.yellow-btn {
   padding: 20px;
   box-sizing: border-box;
   opacity: 0.5;
-  transition:
-    opacity 0.3s,
-    transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s;
 }
 
 .slide.active {
@@ -955,19 +953,19 @@ div#text2.hidden {
   .second-time-video-text .b-title {
     padding: 0px 20px 10px;
   }
-  .img-big-wrap:nth-child(3) .img-one {
+  .index-wrapper .img-big-wrap:nth-child(3) .img-one {
     transform: rotate(-15deg);
     margin-top: -70px;
     margin-left: 30px;
     z-index: -1;
   }
-  .img-big-wrap:nth-child(2) .img-one {
+  .index-wrapper .img-big-wrap:nth-child(2) .img-one {
     transform: rotate(8deg);
     margin-top: 50px;
     margin-left: 5px;
     width: 210px;
   }
-  .img-big-wrap:nth-child(1) .img-one {
+  .index-wrapper .img-big-wrap:nth-child(1) .img-one {
     margin-top: 100px;
     width: 210px;
   }
