--- a/app/styles/our-story.css
+++ b/app/styles/our-story.css
@@ -186,13 +186,13 @@
 }
 
 .our-story-box:nth-child(3) .story-wrap .stroy-i-back {
-  /* background-color: #a12220; */
+  background-color: #a12220;
   width: 77%;
   margin: 0 auto;
 }
 
 .our-story-box:nth-child(4) .story-wrap .stroy-i-back {
-  /* background-color: #a12220; */
+  background-color: #a12220;
   width: 77%;
   margin: 0 auto;
 }
