--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1003,6 +1003,15 @@ span.yellow-head {
   font-weight: 400;
   max-width: 210px;
 }
+.footer-location span p:first-child {
+  padding-bottom: 5px;
+}
+.footer-location span p:last-child {
+  padding-bottom: 5px;
+}
+.footer-location span p:nth-child(3) {
+  padding-bottom: 5px;
+}
 
 footer img.footer-bg-img {
   width: 200px;
@@ -1013,9 +1022,6 @@ img.footer-berline-logo {
   right: 0px;
   bottom: -10px;
   width: 155px;
-}
-
-footer img.footer-bg-img {
 }
 
 .left-block-wrap {
