url fixed in collection page

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -830,7 +830,7 @@ a.header-menu-item.active {
 }
 
 .header-ctas {
-  grid-gap: 1.9rem;
+  grid-gap: 1.2rem;
 }
 
 nav.header-ctas a {
@@ -1129,6 +1129,9 @@ img.footer-bg-img {
 
 .dropdown-wrap:focus {
   outline: none;
+}
+.language-switcher {
+  padding-right: 16px;
 }
 
 .dropdown-menu {
@@ -1462,10 +1465,6 @@ img.footer-bg-img {
     width: 140px;
   }
 
-  .language-switcher {
-    display: none;
-  }
-
   .footer-contact span,
   .footer-contact a,
   .footer-location span,
@@ -1522,6 +1521,9 @@ img.footer-bg-img {
 
   .route-error {
     padding: 0;
+  }
+  .language-switcher {
+    display: none;
   }
 
   .shop-popup {
@@ -1667,10 +1669,6 @@ img.footer-bg-img {
   }
 
   nav.header-menu-desktop {
-    display: none;
-  }
-
-  .language-switcher {
     display: none;
   }
 
