--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1362,6 +1362,9 @@ img.footer-bg-img {
   .footer-sub-block:nth-child(2) {
     padding-top: 43px;
   }
+  .header-menu-desktop {
+    grid-gap: 1.8rem;
+  }
 
   .footer-child {
     flex-wrap: wrap;
@@ -1505,7 +1508,7 @@ img.footer-bg-img {
 
 @media (max-width: 768px) {
   .header-menu-desktop {
-    grid-gap: 1.1875em;
+    grid-gap: 0.87em;
   }
 }
 
