--- a/app/styles/product.css
+++ b/app/styles/product.css
@@ -388,6 +388,7 @@ main {
   display: inline-flex;
   justify-content: center;
   height: 30px;
+  cursor: pointer;
 }
 
 @supports (font: -apple-system-body) and (-webkit-appearance: none) {
