--- a/app/styles/cart.css
+++ b/app/styles/cart.css
@@ -253,6 +253,8 @@
     min-width: 320px;
     max-width: 320px;
   }
+  .cart-summary-aside {
+    width: calc(var(--aside-width) - 60px);}
 
   .cart-line img {
     margin-right: 15px;
