--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -21,12 +21,12 @@
 }
 .marquee {
   position: relative;
-  z-index: 1;
+  z-index: 7;
   background-color: #FEDE03;
   overflow: hidden;
   white-space: nowrap;
   width: 100%;
-  height: 3.813rem;
+  height: 2.813rem;
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -47,9 +47,9 @@
   align-items: center;
   justify-content: center;
 }
-.marquee .marquee__inner .marquee__content  img {
-  width: 38px;
-  height: 38px;
+.marquee .marquee__inner .marquee__content img {
+  width: 32px;
+  height: 32px;
 }
 .marquee .marquee__inner .marquee__content img.truck {
 margin: 0 10px ;
@@ -65,8 +65,7 @@ margin: 0 10px ;
 }
 @media screen and (max-width: 768px) {
   .marquee {
- 
-    height: 3rem;
+    height: 2.5rem;
   }
   .marquee .marquee__inner .marquee__content span.clipped-text{
     font-size: 1rem;
@@ -76,6 +75,38 @@ margin: 0 10px ;
     width: 30px;
     height: 30px;
   }
+}
+
+@media screen and (max-width: 575px) {
+  .marquee {
+    height: 2rem;
+  }
+  .marquee .marquee__inner .marquee__content span.clipped-text{
+    font-size: 14px;
+    line-height: 14px;
+  }
+  .marquee .marquee__inner .marquee__content img{
+    width: 20px;
+    height: 20px;
+  }
+}
+.holiday-banner{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 6;
+  background-color: #000000A6;
+  overflow: hidden;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+.holiday-banner img{
+  width: 100%;
+  height: auto
 }
 
 
@@ -960,6 +991,7 @@ nav.header-ctas a span {
   transform: none !important;
   transition: none !important;
   overflow: hidden;
+  z-index: 7;
 }
 
 .footer-icon a svg {
