--- a/app/styles/catering-page.css
+++ b/app/styles/catering-page.css
@@ -1294,28 +1294,50 @@ padding-bottom: 20px;
     margin: 0 0 25px 0;
   }
   .inner-wolf-bestell .right-logo img{
-    width: 82px;
-    top: -34px;
+    width: 67px;
+    top: -30px;
     left: -30px;
   }
 }
+@media (max-width: 390px) {
+  .inner-wolf-bestell .s-wrap img.naturlich-image {
+    right: -12px;
+}
+}
+
 
 @media (max-width: 375px) {
   .img-one {
     width: 156px;
   }
+  .inner-wolf-bestell{
+    margin-top: 20px;
+  }
   .inner-wolf-bestell .right-logo img {
-    width: 90px;
-    top: -115px;
+    width: 69px;
+    top: -30px;
 }
 .inner-wolf-bestell .s-wrap img.naturlich-image{
   right: -26px;
+  width: 68.88px;
+  height: 68.18px;
+}
+}
+
+@media (max-width: 360px) {
+  .inner-wolf-bestell .right-logo img {
+    width: 90px;
+    top: -82px;
 }
 }
 @media (max-width: 320px) {
 
 .inner-wolf-bestell .s-wrap img.naturlich-image{
   right: -26px;
+}
+.inner-wolf-bestell .right-logo img {
+  width: 90px;
+  top: -86px;
 }
 
 }
