--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -109,7 +109,15 @@
   width: 100%;
   height: auto;
   position: fixed;
+  z-index: 1;
 }
+.small-snow {
+  position: absolute;
+  background-color: white;
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.8);
+  border-radius: 50%;
+}
+
 .holiday-banner-image{
   position: relative;
   height: 100%;
@@ -117,7 +125,19 @@
   margin-top: 120px;
 
 }
-
+.snow-container{
+  width: 100%;
+  height: auto;
+  position:fixed;
+  z-index: 9;
+}
+.holiday-banner .snow{
+  width: 50px;
+  height: 50px;
+  background-image: url("../assets/snow.svg");
+  position:absolute;
+  background-size: cover;
+}
 
 .error-oops footer.footer {
   display: none;
