--- a/app/styles/catering-page.css
+++ b/app/styles/catering-page.css
@@ -1189,10 +1189,12 @@ padding-bottom: 20px;
   .inner-wolf-bestell h3 {
     margin: 0 0 30px 0;
   }
-
-  .img-one {
+  .inner-wolf-bestell .s-wrap .img-one {
     padding: 10px 10px 7px 10px;
-  }
+}
+.inner-wolf-bestell .s-wrap .img-big-wrap:nth-child(1) .img-one{
+  margin-top: 0px;
+}
 
   .img-one .inner-content p {
     font-family: 'BertholdBlock';
@@ -1347,6 +1349,10 @@ padding-bottom: 20px;
 .inner-wolf-bestell .right-logo img {
   width: 90px;
   top: -86px;
+}
+html[lang="nl"] .inner-wolf-bestell .right-logo img {
+  width: 70px;
+  top: -32px;
 }
 
 }
